Revision history for Redis::JobQueue package

    CHANGES:
    - Ability to force re-connection with Redis on error ('reconnect_on_error' attribute).
    - $DEFAULT_CONNECTION_TIMEOUT, $DEFAULT_OPERATION_TIMEOUT constants added.
    - connection_timeout, operation_timeout attributes added.
    - Added the service module Redis::JobQueue::Util.

1.18 Thu May  31 2016
    BUGFIXES:
    - Fix MANIFEST.

1.17 Thu May  26 2016
    BUGFIXES:
    - Tests corrected.
    - Require perl 5.10 core modules version.
    - Data::Dumper 'Sparseseen' method not used now.

1.16 Thu Sep  03 2015
    CHANGES:
    - In the parameters of the constructor 'redis' may be either a Redis object
      or a server string or a hash reference of parameters to create a Redis object.
    - Redis::JobQueue does not close connection to redis server (including '->quit' method)
      if it was provided by user.

1.15 Tue Oct  28 2014
    CHANGES:
    - Time::HiRes::time is used for storing internal attributes.
    - Redis::JobQueue->queue_status returns a floating seconds since the epoch
      for the following information related to the queue:
      max_job_age, min_job_age, lifetime.
    - The Redis::JobQueue->quit method does not close connection to Redis during
      global destruction phase (Perl version 5.14 and above).
    FIXES:
    - Fixed test 't/01_JobQueue/16_utf8.t'

1.13 Tue May  27 2014
    CHANGES:
    - Re-factoring of tests.

1.12 Thu May  23 2014
    CHANGES:
    - Added argument 'check_maxmemory' to the Redis::JobQueue->new
      (thanks to Danny Sterne).

1.11 Fri Mar  14 2014
    CHANGES:
    - Change the port used for testing.

1.10 Thu Feb  20 2014
    CHANGES:
    - Small test improvement.

1.09 Fri Jan  10 2014
    CHANGES:
    - Added method Redis::JobQueue->get_next_job_id.

1.08 Fri Nov  15 2013
    CHANGES:
    - Deleted argument 'encoding' from the Redis::JobQueue->new
      (Starting with version 1.963, Redis module doesn't support encoding).

1.07 Mon Oct  28 2013